--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -2,46 +2,105 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-2 -1 -6 -7]\n",
+      "There are 4 negative numbers in array\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "import math\n",
     "#Use the following code for the questions below:\n",
-    "# a = np.array([4, 10, 12, 23, -2, -1, 0, 0, 0, -6, 3, -7])\n",
+    "a = np.array([4, 10, 12, 23, -2, -1, 0, 0, 0, -6, 3, -7])\n",
     "\n",
-    "#1. How many negative numbers are there?\n"
+    "#1. How many negative numbers are there?\n",
+    "print(a[a < 0])\n",
+    "print(f'There are {len(a[a < 0])} negative numbers in array')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 10 12 23  3]\n",
+      "There are 5 positive numbers in array\n"
+     ]
+    }
+   ],
    "source": [
     "#2. How many positive numbers are there?\n",
-    "\n"
+    "\n",
+    "print(a[a > 0])\n",
+    "print(f'There are {len(a[a > 0])} positive numbers in array')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 10 12 23  3]\n",
+      "[ 4 10 12]\n",
+      "There are 3 positive even numbers in array\n"
+     ]
+    }
+   ],
    "source": [
     "#3. How many even positive numbers are there?\n",
+    "\n",
+    "positive = a[a > 0]\n",
+    "print(positive)\n",
+    "even  = positive[positive % 2 == 0]\n",
+    "print(even)\n",
+    "print(f'There are {len(even)} positive even numbers in array')\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 4 10 12 23 -2 -1  0  0  0 -6  3 -7]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7, 13, 15, 26,  1,  2,  3,  3,  3, -3,  6, -4])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#4. If you were to add 3 to each data point, how many positive numbers would there be?\n",
-    "\n"
+    "print(a)\n",
+    "a_plus_3 = a + 3\n",
+    "a_plus_3\n"
    ]
   },
   {
