complete minus bonus

--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -624,6 +624,7 @@
     "    for number in row:\n",
     "        if(number % 2 == 0):\n",
     "            evens_in_b.append(number)\n",
+    "            \n",
     "print(evens_in_b)\n",
     "\n",
     "evens_in_b = array_b[array_b % 2 == 0]\n",
@@ -865,27 +866,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 159,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 4 7]\n",
+      " [2 5 8]\n",
+      " [3 6 9]]\n",
+      "[[ 1  8 21]\n",
+      " [ 8 25 48]\n",
+      " [21 48 81]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "261"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 7 - Write the code necessary to sum up the result of c times c transposed. Answer should be 261\n"
+    "# Exercise 7 - Write the code necessary to sum up the result of c times c transposed. Answer should be 261\n",
+    "c_transposed = np.transpose(c)\n",
+    "print(c_transposed)\n",
+    "\n",
+    "c_times_c_trans = c * c_transposed\n",
+    "print(c_times_c_trans)\n",
+    "\n",
+    "c_times_c_trans.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "131681894400"
+      ]
+     },
+     "execution_count": 160,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 8 - Write the code necessary to determine the product of c times c transposed. Answer should be 131681894400."
+    "# Exercise 8 - Write the code necessary to determine the product of c times c transposed.\n",
+    "# Answer should be 131681894400.\n",
+    "\n",
+    "c_times_c_trans.prod()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.89399666, -0.98803162,  0.85090352,  0.        ,  0.58061118,\n",
+       "        -0.80115264],\n",
+       "       [ 0.85090352, -0.89399666,  0.98803162, -0.17604595,  0.89399666,\n",
+       "         0.        ],\n",
+       "       [-0.30481062,  0.85090352, -0.85090352,  0.89399666, -0.85090352,\n",
+       "        -0.80115264]])"
+      ]
+     },
+     "execution_count": 162,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Setup 4\n",
     "d = [\n",
@@ -894,88 +955,233 @@
     "    [60, 45, -45, 90, -45, 180]\n",
     "]\n",
     "\n",
-    "# Exercise 1 - Find the sine of all the numbers in d"
+    "# Exercise 1 - Find the sine of all the numbers in d\n",
+    "array_d = np.array(d)\n",
+    "\n",
+    "sin_d = np.sin(array_d)\n",
+    "sin_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.44807362,  0.15425145,  0.52532199,  1.        ,  0.81418097,\n",
+       "        -0.59846007],\n",
+       "       [ 0.52532199, -0.44807362,  0.15425145,  0.98438195, -0.44807362,\n",
+       "         1.        ],\n",
+       "       [-0.95241298,  0.52532199,  0.52532199, -0.44807362,  0.52532199,\n",
+       "        -0.59846007]])"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 2 - Find the cosine of all the numbers in d"
+    "# Exercise 2 - Find the cosine of all the numbers in d\n",
+    "cos_d = np.cos(array_d)\n",
+    "cos_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.99520041, -6.4053312 ,  1.61977519,  0.        ,  0.71312301,\n",
+       "         1.33869021],\n",
+       "       [ 1.61977519,  1.99520041,  6.4053312 , -0.17883906, -1.99520041,\n",
+       "         0.        ],\n",
+       "       [ 0.32004039,  1.61977519, -1.61977519, -1.99520041, -1.61977519,\n",
+       "         1.33869021]])"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 3 - Find the tangent of all the numbers in d"
+    "# Exercise 3 - Find the tangent of all the numbers in d\n",
+    "tan_d = np.tan(array_d)\n",
+    "tan_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 166,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-90, -30, -45, -45])"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 4 - Find all the negative numbers in d"
+    "# Exercise 4 - Find all the negative numbers in d\n",
+    "neg_d = array_d[array_d < 0]\n",
+    "neg_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 167,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 90,  30,  45, 120, 180,  45, 270,  90,  60,  45,  90, 180])"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 5 - Find all the positive numbers in d"
+    "# Exercise 5 - Find all the positive numbers in d\n",
+    "pos_d = array_d[array_d > 0]\n",
+    "pos_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-90, -45, -30,   0,  30,  45,  60,  90, 120, 180, 270])"
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 6 - Return an array of only the unique numbers in d."
+    "# Exercise 6 - Return an array of only the unique numbers in d.\n",
+    "unique_d = np.unique(array_d)\n",
+    "unique_d"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 171,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([-90, -45, -30,   0,  30,  45,  60,  90, 120, 180, 270]), array([1, 2, 1, 2, 1, 3, 1, 3, 1, 2, 1]))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 7 - Determine how many unique numbers there are in d."
+    "# Exercise 7 - Determine how many unique numbers there are in d.\n",
+    "print(np.unique(array_d,return_counts = True))\n",
+    "len(np.unique(array_d))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3, 6)"
+      ]
+     },
+     "execution_count": 173,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 8 - Print out the shape of d."
+    "# Exercise 8 - Print out the shape of d.\n",
+    "array_d.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 174,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 90  45  60]\n",
+      " [ 30 -90  45]\n",
+      " [ 45 -30 -45]\n",
+      " [  0 270  90]\n",
+      " [120  90 -45]\n",
+      " [180   0 180]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Exercise 9 - Transpose and then print out the shape of d."
+    "# Exercise 9 - Transpose and then print out the shape of d.\n",
+    "print(np.transpose(array_d))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 175,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 90,  30],\n",
+       "       [ 45,   0],\n",
+       "       [120, 180],\n",
+       "       [ 45, -90],\n",
+       "       [-30, 270],\n",
+       "       [ 90,   0],\n",
+       "       [ 60,  45],\n",
+       "       [-45,  90],\n",
+       "       [-45, 180]])"
+      ]
+     },
+     "execution_count": 175,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Exercise 10 - Reshape d into an array of 9 x 2"
+    "# Exercise 10 - Reshape d into an array of 9 x 2\n",
+    "np.reshape(array_d, (9,2))"
    ]
   },
   {
