--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -277,16 +277,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([  1,   4,   9,  16,  25,  36,  49,  64,  81, 100])"
+       "3628800"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
     "# Exercise 5 - Make a variable named product_of_a to hold the product \n",
     "# of multiplying all the numbers in the above list together\n",
     "\n",
-    "product_of_a = array_a * array_a\n",
+    "product_of_a = array_a.prod()\n",
     "product_of_a"
    ]
   },
@@ -1186,17 +1186,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 178,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 90,  30,  45,   0, 120, 180,  45, -90, -30, 270,  90,   0,  60,\n",
+       "        45, -45,  90, -45, 180])"
+      ]
+     },
+     "execution_count": 178,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Awesome Bonus For much more practice with numpy, \n",
     "#Go to https://github.com/rougier/numpy-100 and click the \"Fork\" icon in the upper-right\n",
     "#of the screen to fork the repo. This makes a copy of the repo onto your own account. \n",
     "#Next, clone your fork https://github.com/your-username/numpy-100 down to your machine.\n",
-    "#Work through, add, commit, and push your solutions to your own repo.\n",
-    "\n"
+    "#Work through, add, commit, and push your solutions to your own repo.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
