initial commit pandas exercises

--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "55"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,9 +204,11 @@
     "\n",
     "# Use python's built in functionality/operators to determine the following:\n",
     "# Exercise 1 - Make a variable called sum_of_a to hold the sum of all the numbers in above list\n",
+    "\n",
     "array_a = np.array(a)\n",
+    "\n",
     "sum_of_a = array_a.sum()\n",
-    "sum_of_a"
+    "sum_of_a\n"
    ]
   },
   {
@@ -844,7 +846,9 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -866,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [
     {
@@ -876,9 +880,11 @@
       "[[1 4 7]\n",
       " [2 5 8]\n",
       " [3 6 9]]\n",
+      "\n",
       "[[ 1  8 21]\n",
       " [ 8 25 48]\n",
-      " [21 48 81]]\n"
+      " [21 48 81]]\n",
+      "\n"
      ]
     },
     {
@@ -887,7 +893,7 @@
        "261"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 180,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,9 +902,11 @@
     "# Exercise 7 - Write the code necessary to sum up the result of c times c transposed. Answer should be 261\n",
     "c_transposed = np.transpose(c)\n",
     "print(c_transposed)\n",
+    "print()\n",
     "\n",
     "c_times_c_trans = c * c_transposed\n",
     "print(c_times_c_trans)\n",
+    "print()\n",
     "\n",
     "c_times_c_trans.sum()"
    ]
