--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -844,42 +844,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "y    13\n",
-       "p    12\n",
-       "w    10\n",
-       "k     9\n",
-       "m     9\n",
-       "n     9\n",
-       "b     9\n",
-       "h     8\n",
-       "o     8\n",
-       "x     8\n",
-       "r     8\n",
-       "a     8\n",
-       "c     8\n",
-       "d     8\n",
-       "q     8\n",
-       "v     7\n",
-       "t     7\n",
-       "z     7\n",
-       "u     7\n",
-       "j     6\n",
-       "f     6\n",
-       "e     6\n",
-       "i     5\n",
-       "s     5\n",
-       "g     5\n",
-       "l     4\n",
-       "dtype: int64"
+       "(y    13\n",
+       " dtype: int64,\n",
+       " l    4\n",
+       " dtype: int64)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +870,7 @@
     "string_list = list(having_a_stroke_on_keyboard)\n",
     "\n",
     "string_series = pd.Series(string_list)\n",
-    "string_series.value_counts()\n",
+    "string_series.value_counts().head(1), string_series.value_counts().tail(1)\n",
     "#y most frequent, l least frequent\n"
    ]
   },
@@ -1433,9 +1410,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
-   "metadata": {},
+   "execution_count": 208,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numbers: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13, 17, 19, 23, 256, -8, -4, -2, 5, -9] \n",
+      "\n",
+      "exclusion range: [-9, -8, -7, -6, -5, -4, -3, -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9] \n",
+      "\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1449,7 +1438,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1457,8 +1446,12 @@
    "source": [
     "# Exercise 14 - use a list comprehension w/ a conditional in order to produce a list of numbers \n",
     "# with 2 or more numerals\n",
-    "two_or_more_numerals = number_series[number_series.isin(range(-9,10)) == False]\n",
-    "two_or_more_numerals"
+    "\n",
+    "print('numbers:',numbers,'\\n')\n",
+    "print('exclusion range:',list(range(-9,10)),'\\n')\n",
+    "\n",
+    "number_series[number_series.isin(range(-9,10)) == False]\n",
+    "\n"
    ]
   },
   {
@@ -1573,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -1592,7 +1585,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,13 +1597,6 @@
     "primes = number_series[(number_series == 2) |(number_series == 3) | ((number_series % 2 != 0) & (number_series % 3 != 0)) ]\n",
     "primes\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
