--- a/advanced_dataframes.ipynb
+++ b/advanced_dataframes.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# For the following exercises, you'll need to load several datasets using the pydataset library. (If you get an error when trying to run the import below, use pip to install the pydataset package.)\n",
-    "\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "from pydataset import data\n",
     "# When the instructions say to load a dataset, you can pass the name of the dataset as a string\n",
     "# to the data function to load the dataset. You can also view the documentation for the data set by passing \n",
