recovery from git revert

--- a/pymysql_demo.ipynb
+++ b/pymysql_demo.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -122,6 +123,126 @@
    "source": [
     "pd.read_sql('SELECT * FROM employees LIMIT 5 OFFSET 50', url)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emp_no</th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10513</td>\n",
+       "      <td>Yuichiro</td>\n",
+       "      <td>Schicker</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10519</td>\n",
+       "      <td>Yonghoan</td>\n",
+       "      <td>Alencar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10522</td>\n",
+       "      <td>Marke</td>\n",
+       "      <td>Cesareni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10524</td>\n",
+       "      <td>Shigehiro</td>\n",
+       "      <td>Cincotta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10526</td>\n",
+       "      <td>Kwangho</td>\n",
+       "      <td>Theuretzbacher</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   emp_no first_name       last_name\n",
+       "0   10513   Yuichiro        Schicker\n",
+       "1   10519   Yonghoan         Alencar\n",
+       "2   10522      Marke        Cesareni\n",
+       "3   10524  Shigehiro        Cincotta\n",
+       "4   10526    Kwangho  Theuretzbacher"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sql = '''\n",
+    "SELECT\n",
+    "    emp_no,\n",
+    "    first_name,\n",
+    "    last_name\n",
+    "FROM employees\n",
+    "WHERE gender = 'F'\n",
+    "LIMIT 5\n",
+    "OFFSET 200\n",
+    "'''\n",
+    "\n",
+    "pd.read_sql(sql, url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = '''\n",
+    "SELECT\n",
+    "    t.title as title,\n",
+    "    d.dept_name as dept_name\n",
+    "FROM titles t\n",
+    "JOIN dept_emp USING (emp_no)\n",
+    "JOIN departments d USING (dept_no)\n",
+    "'''\n",
+    "\n",
+    "employees = pd.read_sql(query, url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
