modified chipotle bar df and chart

--- a/seaborn_exercises.ipynb
+++ b/seaborn_exercises.ipynb
@@ -1393,7 +1393,7 @@
     }
    ],
    "source": [
-    "#series bar plot\n",
+    "#seaborn doesn't display top4 correctly with the item names as index\n",
     "top4.plot.barh()"
    ]
   },
@@ -1471,7 +1471,7 @@
     }
    ],
    "source": [
-    "#dataframe with correct columns\n",
+    "#created new dataframe with item_name as new column instead of index\n",
     "top4 = pd.DataFrame({'item_name':top4.index.tolist(),'revenue':top4.revenue.tolist()})\n",
     "top4"
    ]
