redoing 101 exercises using pandas starting from #60

--- a/101_exercises.ipynb
+++ b/101_exercises.ipynb
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "_VT4zi5FOnyz"
    },
@@ -1426,15 +1426,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "TljzvMjeOn1A"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Exercise 60 is correct.\n"
+     ]
+    }
+   ],
    "source": [
     "# Exercise 60\n",
     "# Write a function definition named sum_all that takes in sequence of numbers and returns all the numbers added together.\n",
-    "\n",
+    "def sum_all(numlist):\n",
+    "    series = pd.Series(numlist)\n",
+    "    return series.sum()\n",
+    "    \n",
     "assert sum_all([1, 2, 3, 4]) == 10\n",
     "assert sum_all([3, 3, 3]) == 9\n",
     "assert sum_all([0, 5, 6]) == 11\n",
